--- a/public/css/style.css
+++ b/public/css/style.css
@@ -34,6 +34,7 @@ section {
     width: 100%;
     margin: 0 auto;
     background: url('../img/bg1.png') 0 0 no-repeat;
+    filter: alpha(opacity=50);
     background-size: cover;
     /*box-shadow: 0 2px 20px rgba(0, 0, 0, 1);*/
     height: 100%;
