--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,6 +75,7 @@ section {
     flex-direction: column;
     padding-top: 36px;
     padding-bottom: 122px;
+    font-weight: normal;
 }
 
 .pages1 .summary h2 {
@@ -96,6 +97,7 @@ section {
     font-size: 14px;
     list-style-type: disc;
     font-family: PlayRegular, sans-serif;
+    font-weight: normal;
 }
 
 .pages1 .summary h3 {
@@ -113,6 +115,7 @@ section {
     margin-bottom: 10px;
     font-size: 14px;
     font-family: PlayRegular, sans-serif;
+    font-weight: normal;
 }
 /*end summary*/
 
