--- a/public/css/style.css
+++ b/public/css/style.css
@@ -115,7 +115,7 @@ section {
     margin-bottom: 10px;
     font-size: 14px;
     font-family: PlayRegular, sans-serif;
-    font-weight: normal;
+    font-weight: 300;
 }
 /*end summary*/
 
