--- a/public/css/style.css
+++ b/public/css/style.css
@@ -201,7 +201,7 @@ section {
     vertical-align: top;
     font-size: 13px;
     font-family: 'Play', sans-serif;
-    font-weight: bold;
+    font-weight: 900;
 }
 
 .pages2 .work span {
