--- a/public/css/style.css
+++ b/public/css/style.css
@@ -198,8 +198,7 @@ section {
     margin-bottom: 10px;
     vertical-align: top;
     font-size: 13px;
-    font-family: 'Play', sans-serif;
-    font-weight: bold;
+    font-family: PlayBold, sans-serif;
 }
 
 .pages2 .work span {
