--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ section {
 .container  {
     width: 100%;
     margin: 0 auto;
-    background: url('../img/bg1.png') 0 0 no-repeat;
+    background: url('../img/bg.png') 0 0 no-repeat;
     background-size: cover;
     /*box-shadow: 0 2px 20px rgba(0, 0, 0, 1);*/
     height: 100%;
