--- a/public/css/style.css
+++ b/public/css/style.css
@@ -306,7 +306,7 @@ section {
 }
 
 .pages3 table td {
-    padding: 10px 0 0;
+    padding: 10px 10px 0 0;
     color: #000;
     font-size: 13px;
     font-family: 'Play', sans-serif;
